ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shipping-service-ingress
  labels:
    app: shipping-service-new-02
spec:
  rules:
  - host: bootcampcluster.us-south.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: shipping-service-svc
          servicePort: app-port
